[feature] Changed font size, added sscript for the shop items

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- tutorial link: https://www.youtube.com/watch?v=cT_ZYrS3tKc 44:18 -->
+<!-- tutorial link: https://www.youtube.com/watch?v=cT_ZYrS3tKc 1:04:09 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yasslay Store</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
@@ -21,11 +24,41 @@
     </div>
 
     <div class="shop" id="shop">
-        <div class="item">
+        <!-- <div class="item">
             <img class="image" src="images/fem-shirt.avif" alt="women's shirt">
             <div class="details">
                 <h3>Casual Shirt</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti cumque dolores</p>
+                <div class="price-quantity">
+                    <h2>₱ 500</h2>
+                    <div class="buttons">
+                        <i class="bi bi-dash-lg"></i>
+                        <div class="quantity">0</div>
+                        <i class="bi bi-plus-lg"></i>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+        <!-- <div class="item">
+            <img class="image" src="images/jacket.avif" alt="jacket">
+            <div class="details">
+                <h3>Casual Shirt</h3>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <div class="price-quantity">
+                    <h2>₱ 670</h2>
+                    <div class="buttons">
+                        <i class="bi bi-dash-lg"></i>
+                        <div class="quantity">0</div>
+                        <i class="bi bi-plus-lg"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <img class="image" src="images/fem-shirt.avif" alt="women's shirt">
+            <div class="details">
+                <h3>Casual Shirt</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga explicabo nulla quisquam</p>
                 <div class="price-quantity">
                     <h2>₱ 500</h2>
                     <div class="buttons">
@@ -50,37 +83,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="item">
-            <img class="image" src="images/fem-shirt.avif" alt="women's shirt">
-            <div class="details">
-                <h3>Casual Shirt</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti cumque dolores</p>
-                <div class="price-quantity">
-                    <h2>₱ 500</h2>
-                    <div class="buttons">
-                        <i class="bi bi-dash-lg"></i>
-                        <div class="quantity">0</div>
-                        <i class="bi bi-plus-lg"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="item">
-            <img class="image" src="images/fem-shirt.avif" alt="women's shirt">
-            <div class="details">
-                <h3>Casual Shirt</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti cumque dolores</p>
-                <div class="price-quantity">
-                    <h2>₱ 500</h2>
-                    <div class="buttons">
-                        <i class="bi bi-dash-lg"></i>
-                        <div class="quantity">0</div>
-                        <i class="bi bi-plus-lg"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
+        </div> -->
     </div>
 </body>
 <script src="main.js"></script>
