[feature] Added increment, decrement, update, and calculation functions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>Yasslay Store</h2>
         <div class="cart">
             <i class="bi bi-cart2"></i>
-            <div class="cartNumber">0</div>
+            <div id="cartNumber" class="cartNumber">0</div>
         </div>
     </div>
 
