--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
 <body>
     <div class="navbar">
-        <h2>Yasslay Store</h2>
-        <div class="cart">
-            <i class="bi bi-cart2"></i>
-            <div id="cartNumber" class="cartNumber">0</div>
-        </div>
+        <a href="index.html">
+            <h2>Yasslay Store</h2>
+        </a>
+
+        <a href="cart.html">
+            <div class="cart">
+                <i class="bi bi-cart2"></i>
+                <div id="cartNumber" class="cartNumber">0</div>
+            </div>
+        </a>
     </div>
 
     <div class="shop" id="shop">
@@ -86,6 +91,7 @@
         </div> -->
     </div>
 </body>
-<script src="main.js"></script>
+<script src="src/data.js"></script>
+<script src="src/main.js"></script>
 
 </html>
